--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.1.17",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
+    "lucide-react": "^0.555.0",
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
