--- a/package.json
+++ b/package.json
@@ -17,16 +17,23 @@
     "@types/node": "^24.10.1",
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "axios": "^1.13.2",
+    "bullmq": "^5.65.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "ioredis": "^5.8.2",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
     "pino": "^10.1.0",
     "qrcode-terminal": "^0.12.0",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
+    "typeorm": "^0.3.27",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/nodemailer": "^7.0.4",
     "@types/qrcode-terminal": "^0.12.2"
   }
 }
