feat: Implement initial WhatsApp bulk messaging and broadcast features with dedicated client and server components.

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,11 @@ tmp/
 temp/
 *.tmp
 
+# SQLite database files (migrated to PostgreSQL)
+*.sqlite
+*.sqlite3
+*.db
+
 # Railway deployment
 .railway/
 
