--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.11",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "lucide-react": "^0.555.0",
