--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,19 @@
-# Environment Variables Configuration
+# Server Configuration
+PORT=3001
 
-# Database (SQLite - auto-created)
-# DATABASE_PATH=./database.sqlite
+# CORS - Allowed origins (comma-separated)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
-# Redis Configuration (Required for DelayNode)
+# Database Configuration (MongoDB - shared with Next.js/Payload)
+DATABASE_URI=mongodb://127.0.0.1/your-database-name
+
+# WhatsApp Session Encryption (32 characters exactly)
+WHATSAPP_ENCRYPTION_KEY=your-32-character-key-here-now
+
+# Redis Configuration (if using BullMQ)
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
 
-# SMTP Email Configuration (Required for EmailNode)
-# Get app password from: https://myaccount.google.com/apppasswords
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-
-# Server Configuration
-PORT=3000
-
-# Optional: Logging
-# LOG_LEVEL=info
+# WhatsApp Configuration
+# Add any WhatsApp-specific configuration here
