--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "bailway-project",
+  "name": "whatsapp-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Express WhatsApp service using Baileys - handles all WhatsApp operations",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/server.js",
@@ -10,7 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@types/express": "^5.0.5",
@@ -21,19 +21,17 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "ioredis": "^5.8.2",
+    "mongoose": "^8.8.4",
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
-    "pg": "^8.16.3",
     "pino": "^10.1.0",
     "qrcode-terminal": "^0.12.0",
-    "reflect-metadata": "^0.2.2",
-    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
-    "typeorm": "^0.3.27",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^7.0.4",
     "@types/qrcode-terminal": "^0.12.2"
   }
